--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,27 @@ body {
     text-align: center;
 }
 
+.card {
+    background: white;
+    width: 50%;
+    display: inline-block;
+    margin: 5px;
+}
 .welcome {
     background: white;
     width: 50%;
     display: inline-block;
+    margin: 5px;
+}
+.quote {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background: white;
+    width: 20%;
+    display: inline-block;
+    margin: 5px;
+}
+
+
+.quote quote-text {
+    line-height: 200%;
 }
